Update meeting link

--- a/calendars/sparse-array.yaml
+++ b/calendars/sparse-array.yaml
@@ -3,7 +3,7 @@ timezone: America/New_York
 events:
   - summary: Sparse Array Work Session
     description: |
-      Meeting Link:  https://meet.google.com/jrp-qgcf-nxh
+      Meeting Link: https://meet.google.com/sks-mvuh-tjy
       Meeting notes: https://hackmd.io/9UCjKdRUTEeoS8KdQNll-A
 
     begin: 2026-02-09 14:00:00
